alignment issue fix

--- a/src/app/modules/authenticate/login/login.component.scss
+++ b/src/app/modules/authenticate/login/login.component.scss
@@ -4,6 +4,10 @@
   flex-direction: column;
   align-items:center;
   height: 100%;
+  background: white;
+}
+app-sub-title{
+  text-align: center;
 }
 .mat-card{
     border: none;
