--- a/src/app/modules/authenticate/register/invite-all/invite-all.component.scss
+++ b/src/app/modules/authenticate/register/invite-all/invite-all.component.scss
@@ -22,4 +22,7 @@
   h1{
     color: #374c66;
   }
+  app-sub-title{
+    text-align: center;
+  }
 }
